--- a/dynamic-routes/views/shop/cart.ejs
+++ b/dynamic-routes/views/shop/cart.ejs
@@ -3,4 +3,22 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
-        <%- include('../includes/end.ejs') %>
+        <main>
+             <% if(products.length>0){%>
+                <ul>
+                    <% products.forEach(p=>{ %>
+                    <p>
+						<li><%= p.productData.title%> (<%=p.qty%>)</li>
+							<form action="/cart-delete-item" method="POST">
+								<input type="hidden" value="<%=p.productData.id%>" name="productId">
+								<button class="btn" type='submit'>Delete</button>
+							</form>
+                    </p>
+                <%  })%>
+            </ul>
+
+        <%}else{%>
+            <h1>No products in cart</h1>
+        <% }%>   
+    </main>
+<%- include('../includes/end.ejs') %>
